@@ -3,6 +3,8 @@ v6.1
 + Added a "Popular" tab on the homepage to browse the most-played games on Steam
 + Store pages now display a full size background
 + Added back links in the header (Forums, Games, Reviews)
++ Selecting booster packs in your inventory now shows the average price of three cards for that game
+: Fixed a bug which would cause CS:GO items not to get market data in non-English languages
 
 
 v6.0.1
